# AMS325_hw4

./: README.md  mandelbrot.py  markov_chain.py  pyproject.toml
