[tool.poetry]
name = "homework4"
version = "0.1.0"
description = "Mandelbrot Sets and Markov Chains"
authors = ["Sung J Kim <1998sungjoong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
scipy = "^1.9.2"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
